[gd_scene load_steps=2 format=3 uid="uid://cskill_tree_main"]

[ext_resource type="Script" path="res://scripts/story_mode/skill_tree.gd" id="1_script"]

[node name="SkillTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.12, 1)

[node name="TreeContainer" type="Control" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="LinesContainer" type="Control" parent="TreeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NodesContainer" type="Control" parent="TreeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_right = -20.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(120, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "< Back"

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Skill Tree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrencyLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "0 Essence"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Instructions" type="Label" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Tap: Purchase  |  Drag: Pan  |  Pinch: Zoom"
horizontal_alignment = 1
vertical_alignment = 1
